2008-07-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (gobject-2.0.lib): Pass appropriate -machine flag to lib.exe.

2008-07-24  Tor Lillqvist  <tml@novell.com>

	* gtype.h: Define G_TYPE_FORMAT as the printf format for a GType
	value. Either G_GSIZE_FORMAT or "lu".

	* gtype.c: Use it instead of the C99 zu.

2008-07-23  Matthias Clasen  <mclasen2redhat.com>

	544177 - Fix trivial cut and paste error in documentation

	* gtype.h: Fix a typo. Pointed out by Paul Bolle.

2008-07-21  Matthias Clasen  <mclasen2redhat.com>

	* === Released 2.17.4 ===

2008-07-21  Michael Natterer  <mitch@imendio.com>

	Reviewed by Tim Janik:

	* gsignal.c (g_signal_chain_from_overridden_handler): allocate
	the temp GValue array with GSLice.

	(g_signal_emit_valist): dito. Remove optimization/obfuscation of
	allocating up to 16 GValues on the stack and always use GSLice.

2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	Bug 539229 – gobject-query calls itself query

	* gobject-query.c: Use the right binary name in help output.
	Patch by Hiroyuki Ikezoe.

2008-07-04  Michael Natterer  <mitch@imendio.com>

	* gobject.c: remove unused #define PREALLOC_CPARAMS.

2008-07-04  Michael Natterer  <mitch@imendio.com>

	Bug 541208 – Functions to easily install and use signals without
	class struct slot

	* gobject.symbols
	* gsignal.[ch] (g_signal_new_class_handler): the same as
	_gtk_binding_signal_new(), to install signals with a callback
	instead of a class struct slot as class closure.

	The next two functions are C convenience and much easier to use
	than the generic overriding and chaining APIs which are intended
	primarily for language bindings:

	(g_signal_override_class_handler): to override a signal with a
	callback instead of a class struct slot.

	(g_signal_chain_from_overridden_handler): to chain up from a
	signal without class struct slot. The API is similar to
	g_signal_emit().

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.3 ===
